# XCFI

./: .gitignore  README.md  install_llvm.sh  zephyr_setup.sh
XCFI-LLVM/lld/ELF/: Config.h  Driver.cpp  Options.td
XCFI-LLVM/lld/ELF/Arch/: ARM.cpp
XCFI-LLVM/llvm/lib/IR/: Type.cpp
XCFI-tfm/: psa-arch-tests  tf-m-tests  xcfi.cmake
XCFI-tfm/bl2/: CMakeLists.txt
XCFI-tfm/bl2/ext/mcuboot/: pub.pem
XCFI-tfm/bl2/src/: tls_dummy.c
XCFI-tfm/cmake/: install.cmake
XCFI-tfm/interface/include/: tfm_veneers.h
XCFI-tfm/lib/backtrace/: CMakeLists.txt
XCFI-tfm/lib/backtrace/src/: backtrace.c
XCFI-tfm/lib/ext/ethos_u_core_driver/: CMakeLists.txt
XCFI-tfm/lib/fih/: CMakeLists.txt
XCFI-tfm/lib/tfm_log_unpriv/: CMakeLists.txt
XCFI-tfm/platform/ext/common/: exception_info.c  faults.c
XCFI-tfm/platform/include/: exception_info.h
XCFI-tfm/platform/ns/: xcfi.cmake
XCFI-tfm/secure_fw/partitions/ns_agent_tz/: CMakeLists.txt  ret2ns_veneers.c
XCFI-zephyr/: .gitignore  build.sh  build_with_tfm.sh  debug.sh  dump.sh  flash.sh  flash_with_tfm.sh  images_single.txt  images_with_tfm.txt  patch_picolibc.sh  setup-cmsis.sh
XCFI-zephyr/benchmark/beebs/: zcp_main.sh  zcp_prj.sh
XCFI-zephyr/benchmark/beebs/aha-compress/: CMakeLists.txt
XCFI-zephyr/benchmark/beebs/aha-mont64/: CMakeLists.txt
XCFI-zephyr/benchmark/beebs/bs/: CMakeLists.txt
XCFI-zephyr/benchmark/beebs/bubblesort/: CMakeLists.txt
XCFI-zephyr/benchmark/beebs/cnt/: CMakeLists.txt
XCFI-zephyr/benchmark/beebs/compress/: CMakeLists.txt
XCFI-zephyr/benchmark/beebs/cover/: CMakeLists.txt
XCFI-zephyr/benchmark/beebs/ns/: CMakeLists.txt
XCFI-zephyr/benchmark/coremark-pro/cjpeg-rose7-preset/: CMakeLists.txt
XCFI-zephyr/benchmark/coremark-pro/cjpeg-rose7-preset/src/: Rose256_bmp.c  Rose256_bmp.h  algo.h  bmark_lite.c  cdjpeg.c  cdjpeg.h  cjpeg-rose7-preset.c  filedata.c  jcapimin.c  jcapistd.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jcinit.c  jcmainct.c  jcmarker.c  jcmaster.c  jcomapi.c  jcparam.c  jcprepct.c  jcsample.c  jdatadst.c  jerror.c  jfdctint.c  jinclude.h  jmemansi.c  jmemmgr.c  rdbmp.c
XCFI-zephyr/benchmark/coremark-pro/loops-all-mid-10k-sp/: CMakeLists.txt
XCFI-zephyr/benchmark/coremark-pro/loops-all-mid-10k-sp/src/: 100.c  100k.c  100kdot.c  10k.c  10kdot.c  1k.c  1kdot.c  32.c  loops-all-mid-10k-sp.c  loops.c
XCFI-zephyr/benchmark/coremark-pro/parser-125k/: CMakeLists.txt
XCFI-zephyr/benchmark/coremark-pro/parser-125k/src/: ezxml.c  ezxml.h  parser-125k.c  parser.c  stubs.c
XCFI-zephyr/benchmark/coremark-pro/zip-test/: CMakeLists.txt
XCFI-zephyr/benchmark/coremark-pro/zip-test/src/: crc32.c  deflate.h  gzguts.h  zconf.h  zip-test.c  zip_darkmark.c  zutil.h
XCFI-zephyr/benchmark/realtime/tacle-bench/lift/: CMakeLists.txt  prj.conf
XCFI-zephyr/benchmark/realtime/tacle-bench/lift/src/: liftlibcontrol.c  liftlibcontrol.h  liftlibio.c  liftlibio.h  main.c
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench/: CMakeLists.txt  prj.conf
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench/papabench/sw/airborne/autopilot/: adc.c  gps_ubx.c  link_fbw.c  main.c  mainloop.c  modem.c  spi.c  timer.h  uart.c  ubx.h
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench/papabench/sw/airborne/fly_by_wire/: adc_fbw.c  main.c  servo.c  spi.c  spi.h  timer.h  uart.c
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench/papabench/sw/include/: inttypes.h
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench/src/: fake_hw.c  fake_hw.h  fake_signal.h  main.c  papabench_stub.c
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac/: CMakeLists.txt  prj.conf
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac/src/: main.c
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac/src/autopilot/: autopilotloop.c
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac/src/fbw/: fbw.c
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac/src/var_include/: fake_avr.h  inttypes.h
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac_bac/: CMakeLists.txt  prj.conf
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac_bac/papabench/aadl_sources/aadl/: paparazzi_Bench_V1_Tache_PnP_Inter_PnP.aadl  paparazzi_Bench_V2_Tache_PnP_Inter_AnP.aadl  paparazzi_Bench_V3_Tache_PP_Inter_PP.aadl  paparazzi_Bench_V4_Tache_PP_Inter_AP.aadl
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac_bac/papabench/aadl_sources/aaxl/: paparazzi_Bench_V1_Tache_PnP_Inter_PnP.aaxl  paparazzi_Bench_V2_Tache_PnP_Inter_AnP.aaxl  paparazzi_Bench_V3_Tache_PP_Inter_PP.aaxl  paparazzi_Bench_V4_Tache_PP_Inter_AP.aaxl
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac_bac/papabench/arch/include/avr/arch/: interrupt.h  io.h  iom128.h  iom8.h  portpins.h  sfr_defs.h  signal.h
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac_bac/papabench/sw/airborne/autopilot/: ad7714.c  adc.c  gps_sirf.c  gps_ubx.c  if_calib.c  link_fbw.c  mainloop.c  modem.c  spi.c  timer.h  uart.c
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac_bac/papabench/sw/airborne/fly_by_wire/: adc_fbw.c  link_autopilot.h  main.c  ppm.c  servo.c  spi.c  timer.h  uart.c
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac_bac/papabench/sw/include/: inttypes.h
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac_bac/papabench/sw/include/c/: traces.h
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac_bac/papabench/sw/lib/c/: geometry.c  logger.c
XCFI-zephyr/benchmark/realtime/tacle-bench/papabench_bac_bac/src/: angles.h  avr_stub.c  main.c  papabench_stubs.c  pb_port.c  pb_port.h  pb_sched.c  pb_sched.h
XCFI-zephyr/cmake/: gcc-m-fpu.cmake
XCFI-zephyr/drivers/timer/: cortex_m_systick.c
XCFI-zephyr/kernel/: banner.c  init.c
XCFI-zephyr/modules/trusted-firmware-m/: CMakeLists.txt
XCFI-zephyr/samples/tfm_integration/ret2ns/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
XCFI-zephyr/samples/tfm_integration/ret2ns/src/: main.c
XCFI-zephyr/samples/tfm_integration/tfm_secure_partition/: CMakeLists.txt  prj.conf
XCFI-zephyr/samples/tfm_integration/tfm_secure_partition/src/: main.c
(+262 files in other folders)
